--- a/koreangame.css
+++ b/koreangame.css
@@ -11,6 +11,12 @@ body{
     height: 100vh;
 }
 
+button{
+    background: none;
+    outline: none;
+    cursor: pointer;
+    border: none;
+}
 
 .container{
     display: flex;
@@ -28,6 +34,13 @@ body{
     cursor: pointer;
     margin: 3rem auto;
     padding: 1rem 1.5rem;
+    transition: transform 200ms;
+}
+
+.starter:hover{
+    transform: scale(1.1);
+    background-color: lightcoral;
+    border-radius: 50%;
 }
 
 .loading{
@@ -57,4 +70,37 @@ input{
 
 .time{
     padding-right: 20px;
+}
+
+.message_container{
+    display: flex;
+    justify-content: center;
+}
+
+.message_box{
+    text-align: center;
+    width: 500px;
+    height: 150px;
+    padding: 20px;
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    border-radius: 10px;
+}
+
+.message{
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.replay_buttton{
+    margin-top: 20px;
+    font-size: 50px;
+    background-color:rgb(219, 94, 131);
+    border-radius: 50%;
+    width: 80px;
+    color: rgb(219, 198, 78);
+    transition: transform 300ms;
+}
+
+.replay_buttton:hover{
+    transform: scale(1.1) rotate(-15deg);
 }
