--- a/koreangame.css
+++ b/koreangame.css
@@ -76,6 +76,7 @@ input{
 .message_container{
     display: flex;
     justify-content: center;
+    visibility: hidden;
 }
 
 .message_box{
@@ -101,6 +102,7 @@ input{
     color: rgb(219, 198, 78);
     transition: transform 300ms;
 }
+
 
 .replay_button:hover{
     transform: scale(1.1) rotate(-15deg);
